# pfc-migrate

./: .gitignore  CHANGELOG.md  README.md  VERSION.txt  pfc_migrate.py  pyproject.toml  requirements.txt  test_all_backends.py  test_lossless.py  test_pfc_migrate_v2.py  test_pfc_migrate_v21.py  test_s3_lossless.py
examples/: cratedb_archive_explorer.py
