[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfc-migrate"
version = "1.2.0"
description = "Export database data to PFC cold storage — and convert JSONL archives from local disk, S3, Azure, or GCS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["pfc", "jsonl", "compression", "logs", "duckdb", "migration", "s3", "azure", "gcs", "glacier", "cratedb", "questdb", "cold-storage"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]

# Core deps: nothing (gzip + bz2 are stdlib)
dependencies = []

[project.optional-dependencies]
# File format support
zstd  = ["zstandard>=0.21"]
lz4   = ["lz4>=4.0"]
# Cloud storage backends
s3    = ["boto3>=1.26"]
azure = ["azure-storage-blob>=12.9.0"]
gcs   = ["google-cloud-storage>=2.0"]
# Database direct export (CrateDB, QuestDB, and any PostgreSQL wire protocol DB)
postgres = ["psycopg2-binary>=2.9"]
questdb  = ["psycopg2-binary>=2.9"]
# Everything
all = [
    "zstandard>=0.21", "lz4>=4.0",
    "boto3>=1.26", "azure-storage-blob>=12.9.0", "google-cloud-storage>=2.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
pfc-migrate = "pfc_migrate:main"

[project.urls]
Homepage   = "https://github.com/ImpossibleForge/pfc-migrate"
Repository = "https://github.com/ImpossibleForge/pfc-migrate"

[tool.setuptools]
py-modules = ["pfc_migrate"]
