[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfc-migrate"
version = "2.1.0"
description = "Convert compressed JSONL archives (gzip, zstd, lz4, bzip2) to PFC cold storage from local disk, S3, Azure, or GCS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["pfc", "jsonl", "compression", "logs", "migration", "s3", "azure", "gcs", "glacier", "cold-storage"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]

# Core deps: nothing (gzip + bz2 are stdlib)
dependencies = []

[project.optional-dependencies]
zstd  = ["zstandard>=0.21"]
lz4   = ["lz4>=4.0"]
s3    = ["boto3>=1.26"]
azure = ["azure-storage-blob>=12.9.0"]
gcs   = ["google-cloud-storage>=2.0"]
all   = ["zstandard>=0.21", "lz4>=4.0", "boto3>=1.26", "azure-storage-blob>=12.9.0", "google-cloud-storage>=2.0"]

[project.scripts]
pfc-migrate = "pfc_migrate:main"

[project.urls]
Homepage   = "https://github.com/ImpossibleForge/pfc-migrate"
Repository = "https://github.com/ImpossibleForge/pfc-migrate"

[tool.setuptools]
py-modules = ["pfc_migrate"]
